rns-lang/tests/snapshots/lexer-strings-unterminated_string_with_newline.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public Test
"String that breaks
across lines"
.end
----- STDOUT -----

----- STDERR -----
Error: unterminated string literal
   ╭─[ test_data/integration/lexer/strings/unterminated_string_with_newline.ja:2:1 ]
   │
 2 │ "String that breaks
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
